# qaaf_studio

./: .gitignore  README.md  comparative_session.ps1  config.yaml  conftest.py  deploy.sh  pyproject.toml  requirements.txt  shell.nix  test-qaaf-studio.sh
docs/: MIF_Provenance.md  architecture.md  avant_apres.md  gate0_yfinance_troubleshooting.md  recalibration_plan.md  signal_oracle.md
layer1_engine/: __init__.py  backtester.py  benchmark_factory.py  data_loader.py  metrics_engine.py  metrics_engine_0.py  split_manager.py
layer3_validation/: __init__.py  dsr.py  metis.py  metis_q1_walkforward.py  metis_q2_permutation.py  metis_q3_ema_stability.py  metis_q4_dsr.py  metis_runner.py
layer4_decision/: __init__.py  kb_h9_ema60j.yaml  kb_manager.py  lentilles_inventory.yaml  n_trials_tracker.py
sessions/: session_runner.py  session_template.py
studio/: __init__.py  interfaces.py  oracle.py
tests/: conftest.py  test_benchmark_calibration.py  test_filter_gate0.py  test_filter_metis_q1.py  test_filter_metis_q2.py  test_filter_metis_q3.py  test_filter_metis_q4.py  test_filter_mif_phase0.py  test_filter_mif_phase1.py  test_filter_mif_phase2.py  test_filter_paf_d1.py  test_filter_paf_d2.py  test_filter_paf_d3.py  test_interfaces.py  test_layer1_backtester.py  test_layer1_metrics.py  test_layer2_mif.py  test_layer2_paf.py  test_layer2_paf_adversarial.py  test_layer3_metis.py  test_layer4_dsig.py  test_signal_oracle_certified.py
tmp/: QAAF_ClaudeCode_Part4_METIS.md
tools/: README.md  certify_metric.py  check.py  check_v2.py  cleanup.py  cleanup_v2.py  fancy_progress.py  (+6 more)
(+81 files in other folders)
