[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "qaaf-studio"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "pyyaml",
    "scipy",
    "yfinance>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["layer1_engine*", "layer2_qualification*", "layer3_validation*", "layer4_decision*"]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_tmp"
markers = [
    "pipeline_certification: tests de certification complète du pipeline (rouge avant recalibration, vert après Livrable 4)",
]
